--- a/app/src/main/res/layout/tab_child.xml
+++ b/app/src/main/res/layout/tab_child.xml
@@ -2,24 +2,45 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="106dp">
-    <ImageView
-        android:id="@+id/VideoThumbnailNew"
-        android:layout_marginLeft="16dp"
-        android:layout_width="120dp"
-        android:layout_height="90dp"
-        android:layout_alignParentLeft="true"
-        android:scaleType="fitXY"
-        android:background="@android:drawable/dialog_holo_light_frame"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="8dp" />
+
+    <FrameLayout
+        android:layout_width="152dp"
+        android:layout_height="100dp"
+        android:id="@+id/VideoThumbnailFrameLayout"
+        android:layout_alignParentTop="true"
+        >
+
+
+        <ImageView
+            android:id="@+id/VideoThumbnailNewDummy"
+            android:layout_width="118dp"
+            android:layout_height="88dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:drawable/dialog_holo_light_frame"
+            android:scaleType="fitXY"/>
+
+        <com.mn2square.videolistingmvp.utils.thumbnailutils.CustomImageView
+            android:id="@+id/VideoThumbnailNew"
+            android:layout_width="105dp"
+            android:layout_height="72dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="22dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="16dp"
+            android:scaleType="fitXY"/>
+    </FrameLayout>
     <!--&lt;!&ndash; video duration &ndash;&gt;-->
     <TextView
         android:id="@+id/VideoDurationNew"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_toRightOf="@+id/VideoThumbnailNew"
+        android:layout_toRightOf="@+id/VideoThumbnailFrameLayout"
         android:textSize="12dp"
         android:layout_marginRight="16dp" />
 
@@ -36,7 +57,7 @@
         android:layout_marginBottom="4dp"
         android:layout_marginRight="16dp"
         android:layout_below="@id/VideoDurationNew"
-        android:layout_toRightOf="@+id/VideoThumbnailNew"/>
+        android:layout_toRightOf="@+id/VideoThumbnailFrameLayout"/>
 
 
 
@@ -45,7 +66,7 @@
         android:id="@+id/VideoSizeNew"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/VideoThumbnailNew"
+        android:layout_toRightOf="@+id/VideoThumbnailFrameLayout"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="12dp"
         android:textSize="12sp" />
